# ceregrep-client

./: .ceregrep.example-with-hooks.json  .ceregrep.example.json  .gitignore  AGENTS.md  CEREBRAS_FIX.md  CEREBRAS_QUICKSTART.md  COMMANDS.md  DEAD_CODE_FIXED.md  DEAD_CODE_TODO.md  DEBUG.md  DEBUG_LOGGING.md  DIAGNOSTICS.md  GET_STARTED.sh  HOOKS.md  IMAGE_FIXES_FINAL_SUMMARY.md  IMAGE_SUPPORT_IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  INK_TOOLS_GUIDE.md  LICENSE  MEMORY_ISSUE_ANALYSIS.md  MEMORY_PROFILING.md  OAUTH_IMPLEMENTATION.md  PROPER_PROCESS_SPAWNING.md  QUICK_IMAGE_REFERENCE.md  README.md  SETUP.md  SHELL_MODE_INTEGRATION.md  SHELL_MODE_QUICK_START.md  SHELL_MODE_TEST_README.md  SHELL_MODE_VERIFICATION.md  TEST_IMAGE_INSTRUCTIONS.md  UNDERSTANDING_IMAGE_ISSUE.md  index.ts  lodash.d.ts  memory_investigation_agent.js  package-lock.json  package.json  pyproject.toml  test-architecture-analysis.ts  test-binary-search.js  (+28 more)
.claude/: daic-config.json
agents/: config-merger.ts  index.ts  init.ts  manager.ts  schema.ts  tool-wrapper.ts
auth/: DebugLogger.ts  anthropic-device-flow.ts  anthropic-oauth-provider.ts  cli-types.ts  oauth-manager-instance.ts  oauth-manager.ts  token-store.ts  types.ts
claude-code-template/: README.md  Tool.ts  build.js  commands.ts  context.ts  fix-all-imports.js  fix-imports.js  fix-ts-imports.js  fix-ts2835.js  package-lock.json  package.json  permissions.ts  query.ts  runtime-polyfill.js  test-fs-resources.mjs  tools.ts  tsconfig.json
cli/: index.ts  stream-renderer.ts
config/: loader.ts  migrate-swarmrc.ts  schema.ts  swarmrc-loader.ts
(+447 files in other folders)
